// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkIconMarkerBackground should render properly 1`] = `
<svg
  className="bpk-icon-marker-background"
  height="36"
  viewBox="4 3 30 36"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34 17.6317L33.9996 17.7436C34.003 18.1142 33.9861 18.4834 33.9489 18.8484C33.7307 21.4344 32.8231 23.8297 31.4057 25.8592C28.5742 30.6675 23.8653 35.3648 20.2071 38.55C19.5179 39.15 18.4821 39.15 17.7929 38.55C14.1347 35.3648 9.42576 30.6675 6.59428 25.8592C5.17695 23.8297 4.26934 21.4344 4.05112 18.8484C4.01387 18.4834 3.99703 18.1142 4.00043 17.7435L4 17.6317C4 9.55085 10.7157 3 19 3C27.2843 3 34 9.55085 34 17.6317Z"
  />
</svg>
`;

exports[`BpkIconMarkerBackground should render properly with "disabled" 1`] = `
<svg
  className="bpk-icon-marker-background bpk-icon-marker-background--disabled"
  height="36"
  viewBox="4 3 30 36"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34 17.6317L33.9996 17.7436C34.003 18.1142 33.9861 18.4834 33.9489 18.8484C33.7307 21.4344 32.8231 23.8297 31.4057 25.8592C28.5742 30.6675 23.8653 35.3648 20.2071 38.55C19.5179 39.15 18.4821 39.15 17.7929 38.55C14.1347 35.3648 9.42576 30.6675 6.59428 25.8592C5.17695 23.8297 4.26934 21.4344 4.05112 18.8484C4.01387 18.4834 3.99703 18.1142 4.00043 17.7435L4 17.6317C4 9.55085 10.7157 3 19 3C27.2843 3 34 9.55085 34 17.6317Z"
  />
</svg>
`;

exports[`BpkIconMarkerBackground should render properly with "interactive" 1`] = `
<svg
  className="bpk-icon-marker-background bpk-icon-marker-background--interactive"
  height="36"
  viewBox="4 3 30 36"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34 17.6317L33.9996 17.7436C34.003 18.1142 33.9861 18.4834 33.9489 18.8484C33.7307 21.4344 32.8231 23.8297 31.4057 25.8592C28.5742 30.6675 23.8653 35.3648 20.2071 38.55C19.5179 39.15 18.4821 39.15 17.7929 38.55C14.1347 35.3648 9.42576 30.6675 6.59428 25.8592C5.17695 23.8297 4.26934 21.4344 4.05112 18.8484C4.01387 18.4834 3.99703 18.1142 4.00043 17.7435L4 17.6317C4 9.55085 10.7157 3 19 3C27.2843 3 34 9.55085 34 17.6317Z"
  />
</svg>
`;

exports[`BpkIconMarkerBackground should render properly with "selected" 1`] = `
<svg
  className="bpk-icon-marker-background bpk-icon-marker-background--selected"
  height="42"
  viewBox="4.5 3.5 36 42"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M39.4994 20.1989L39.4995 20.2056C39.5034 20.6193 39.4841 21.031 39.4414 21.4376L39.4413 21.4376L39.4405 21.4466C39.1868 24.3698 38.1316 27.0792 36.4808 29.3774L36.4693 29.3933L36.4592 29.4101C33.1039 34.9496 27.5027 40.3879 23.1254 44.0934C22.4849 44.6355 21.5151 44.6355 20.8746 44.0934C16.4973 40.3879 10.8961 34.9496 7.5408 29.4101L7.53065 29.3933L7.51923 29.3774C5.86842 27.0792 4.8132 24.3698 4.55947 21.4466L4.55955 21.4466L4.55861 21.4376C4.51593 21.031 4.49659 20.6193 4.50049 20.2055L4.50054 20.2055L4.50051 20.1988L4.5 20.0704C4.5 20.07 4.5 20.0697 4.5 20.0694C4.50056 10.9429 12.31 3.5 22 3.5C31.6899 3.5 39.4994 10.9429 39.5 20.0694C39.5 20.0697 39.5 20.07 39.5 20.0704L39.4994 20.1989Z"
  />
</svg>
`;
